<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">SshServer</string>
  <string name="notification_text_1" formatted="true">Server %1$d started on port %2$d</string>
  <string name="notification_text_2" formatted="true">, for user \'%1$s\'</string>
  <string name="add_server_msgbox_title">Add new server</string>
  <string name="edit_server_msgbox_title">Edit server</string>
  <string name="ok">OK</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="servers">Servers</string>
  <string name="servers_list">Servers list</string>
  <string name="cancel">Cancel</string>
  <string name="start">Start</string>
  <string name="stop">Stop</string>
  <string name="edit">Edit</string>
  <string name="delete">Delete</string>
  <string name="lbl_name">Name:</string>
  <string name="lbl_port">Port:</string>
  <string name="error">ERROR</string>
  <string name="error_no_name">Invalid server name</string>
  <string name="error_no_port">Invalid server port</string>
  <string name="error_already_present">The current entry is already inserted</string>
  <string name="on_double_back_exit_text">Press once again to exit!</string>
  <string name="default_port">2222</string>
  <string name="unknown">UNKNOWN</string>
  <string name="host_address">Host address:</string>
  <string name="auth_mode">Auth mode:</string>
  <string name="lbl_username">User name:</string>
  <string name="lbl_userpwd">Password:</string>
  <string name="anonymous">Anonymous</string>
  <string name="normal">Normal</string>
  <string name="lbl_user">User:</string>
  <string name="error_return_an_exception">return an exception</string>
  <string name="lbl_sys_override">If checked, the variables defined below will be overloaded, otherwise the configuration value will be ignored.</string>
  <string name="lbl_sys_user">System user name:</string>
  <string name="lbl_sys_group">System user group:</string>
  <string name="lbl_sys_home">System home dir:</string>
  <string name="more">MORE</string>
  <string name="message">Message:</string>
  <string name="stack_trace">Stack traces:</string>
  <string name="exception">Exception</string>

  <string-array name="auth_mode_list">
    <item>Anonymous</item>
    <item>Normal</item>
  </string-array>

</resources>
